--- a/resume.html
+++ b/resume.html
@@ -1,38 +1,13 @@
 ---
-layout: page
-title: Resume
+layout: resume
 ---
-<div class="container">
-    <header class="three columns">
-        <img src="{{ site.baseurl }}static/img/profile.png" class="me">
-        <h1>{{ site.name }}</h1>
-        <p>
-            <a href="{{ site.tel_full }}">{{ site.tel }}</a>
-        </p>
-        <address>
-            <a href="{{ site.google_maps }}">
-                {{ site.address }}<br/>
-                {{ site.postcode }}<br/>
-                {{ site.city }}<br/>
-                {{ site.country }}
-            </a>
-        </address>
-        <p>
-            <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
-        </p>
-        <p>
-            <a href="{{ site.email_full }}">{{ site.email }}</a><br/>
-            <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
-            <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
-        </p>
-    </header>
-    <div class="thirteen columns clearfix">
 
-        {{ content }}
+{% include employment.html %}
 
-    <footer class="thirteen columns">
-        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-           <!--  <a href="https://www.github.com/biomadeira/vitae">vitae</a> with ♥</p> -->
-    </footer>
-    </div>
-</div>
+{% include education.html %}
+
+{% include skills.html %}
+
+{% include initiatives.html %}
+
+{% include interests.html %}
